# ITErpretability

./: .gitignore  README.md  analyze_results.ipynb  plot_results.ipynb  requirements.txt  requirements_dev.txt  run_experiments.py  run_experiments_synthetic.py  setup.cfg  setup.py  test_iterpretability.ipynb
catenets/datasets/data/: x_trans.csv
catenets/models/torch/: __init__.py  representation_nets.py
src/iterpretability/: __init__.py  experiment.py  experiments.py  explain.py  hyperparam_search.py  simulate.py  synthetic_experiment.py  synthetic_simulate.py  utils.py
src/iterpretability/datasets/: data_loader.py
src/iterpretability/datasets/covid/: process_covid.py
src/iterpretability/datasets/news/: process_news.py
src/iterpretability/datasets/tcga/: process_tcga.py
tests/: conftest.py  test_experiment.py  test_explain.py  test_hyperparam_search.py  test_learners.py  test_simulate.py
